added link for Research team

--- a/index.html
+++ b/index.html
@@ -193,9 +193,10 @@
 
                     <h4 class="service-heading"> Data Scientist Intern - Nuance Communications</h4>
                     <h6 class="service-heading">June 2017 - August 2017</h6>
-                    <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern as part of the Dragon ASR Research team during the Summer of 2017.
+                    <p class="text-muted"> I worked at Nuance Communications as a Data Scientist Intern as part of the <a href="http://research.nuance.com/category/speech-recognition/"> Dragon ASR Research</a> team during the Summer of 2017.
 
-                        <!--       TODO: Update this with specific tasks of what I did
+                        <!--       TODO: Update this with specific tasks of what I did. Post this http://research.nuance.com/category/speech-recognition/ somewhere
+
                         Here is a brief discription of what I did during my internship:
 
                         <li class="text-left">The name of a street can have different spellings in different locations. When the automated speech recognizer(ASR) spells that word that the user spoke, it can be wrong as the ASR does not consider the proximity of the street to the user when doing recognition and this can lead to results that have slight misspellings relative to what the user intended. The spelling of the street can be outside the boundaries of the user rather than in the user's close proximity. This leads to the user getting a wrong output and the incorrect destination on the map. Example: A user is located in Pittsburgh, PA and spoke "1060 McNeilly Rd" the ASR output is "1060 McNeely Rd". The Maps database sends the user to "1060 McNeel Rd" in Akron, OH which is 149km away from the user instead of the correct McNeilly Road just 5km from the user!
