--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
-
+    <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <!-- Theme CSS-->
     <link href="css/agency.min.css" rel="stylesheet">
 
@@ -123,19 +123,57 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>Technical Skills</h4>
-                                    <h5 class="subheading">Programming/Scripting Languages</h5>
+                                    <h4>Technical Skills
+                                        <ul class="list-inline list-icons">
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-html5"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-css3"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-java"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-python"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-prolog"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-git"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-vim"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-postgresql"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-go"></i>
+                                            </li>
+                                            <li class="list-inline-item">
+                                                <i class="devicons devicons-linux"></i>
+                                            </li>
+                                        </ul>
+                                    </h4>
+                                    <h5 class="subheading">Programming/Scripting Languages
+                                    </h5>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Java, Python, SQL, Prolog, Scheme, Octave, HTML, CSS</p>
+
                                 </div>
                                 <h5 class="subheading">Technologies/Environment</h5>
                                 <div class="timeline-body">
                                     <p class="text-muted">Git; Bash; Lucene; Pandas; scikit-learn; Jupyter; PostgreSQL; Vi(m); Selenium; UML; JSON; UNIX/Linux; Tableau</p>
                                 </div>
                             </div>
+
                         </li>
+
                         <li>
+
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/Screen-Shot-2017-02-08-at-10.38.31-300x283.png" alt="">
                             </div>
@@ -219,9 +257,9 @@
                     <h3 class="section-subheading text-muted">Here are some projects that I have done. You can get more information by clicking on them</h3>
                 </div>
             </div>
-        </div>
 
-        <div class="container">
+
+
             <div class="row">
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
@@ -230,11 +268,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-
                         <img src="img/portfolio/disaster.png" class="img-responsive" alt="" width="300">
+
                     </a>
                     <div class="portfolio-caption">
-
                         <h4>Canadian Disasters Analysis and Prediction Data Science Project </h4>
                         <p class="text-muted">Data Science</p>
                     </div>
@@ -269,6 +306,7 @@
                         </div>
 
                         <img src="img/portfolio/smart-fridge-app.jpg" class="img-responsive" alt="" width="300">
+
                     </a>
                     <div class="portfolio-caption">
 
@@ -757,8 +795,8 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- TODO: hide this? Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
+    <!-- TODO: hide this? Plugin JavaScript 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>-->
 
     <!-- Contact Form JavaScript -->
     <script src="js/jqBootstrapValidation.js"></script>
@@ -778,7 +816,6 @@
         $(document).ready(function() {
             $('[data-toggle="popover"]').popover();
         });
-
     </script>
 
     <!-- Google Analytics -->
@@ -797,7 +834,6 @@
 
         ga('create', 'UA-97389856-1', 'auto');
         ga('send', 'pageview');
-
     </script>
 
 </body>
